[gd_scene load_steps=2 format=3 uid="uid://crxhp1le67olu"]

[ext_resource type="Script" path="res://game/scenes/menu/game_modes.gd" id="1_mfy8g"]

[node name="game_modes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mfy8g")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="single_player" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Single Player"

[node name="crazy_tiles" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Crazy Tiles"

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/single_player" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="VBoxContainer/crazy_tiles" to="." method="_on_crazy_tiles_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
